<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="false"
    android:layout_alignParentStart="false"
    tools:context="com.vic.notification.MainActivity"
    tools:ignore="RtlHardcoded"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/displayTime"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@+id/tableLayout3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:gravity="center"
        android:onClick="pickTime"
        android:text="@string/time"
        android:textSize="90sp"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/setTime"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:onClick="setTime"
        android:text="@string/save"
        tools:ignore="HardcodedText" />

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setTime"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="ringtoneRow">

            <TextView
                android:id="@+id/ringtoneButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/setTime"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10sp"
                android:lineSpacingExtra="6sp"
                android:paddingTop="10dp"
                android:text="@string/ringtone_txt"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="19sp"
                tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />

            <TextView
                android:id="@+id/ringtoneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-45sp"
                android:layout_marginTop="23sp"
                android:textSize="16sp"
                tools:ignore="RtlHardcoded" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="snoozeRow">

            <TextView
                android:id="@+id/snoozeDuration"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignBottom="@+id/setTime"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10sp"
                android:lineSpacingExtra="6sp"
                android:paddingTop="10dp"
                android:text="@string/snooze_txt"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="19sp"
                tools:ignore="HardcodedText,ObsoleteLayoutParam,RtlHardcoded" />

            <TextView
                android:id="@+id/displaySnoozeTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-45sp"
                android:layout_marginTop="23sp"
                android:text="@string/zeroMin"
                android:textSize="16sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="65dp"
            tools:ignore="ExtraText">

            <Switch
                android:id="@+id/repeatSwitch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/repeat_txt"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="19sp"
                android:theme="@style/switchStyle"
                tools:ignore="HardcodedText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal" />
        </TableRow>

        <TableRow
            android:id="@+id/vibrateRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/vibrateSwitch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/vibrate_txt"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="19sp"
                android:theme="@style/switchStyle"
                tools:ignore="HardcodedText" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_weight="1"
                android:background="?attr/colorButtonNormal" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/setTime"
        android:layout_alignTop="@+id/displayTime"
        android:layout_marginStart="29dp"
        android:layout_marginTop="15dp"
        android:text="@string/hour"
        android:textColor="@android:color/holo_blue_dark"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignEnd="@+id/setTime"
        android:layout_marginEnd="22dp"
        android:layout_marginLeft="80dp"
        android:text="@string/snooze_minute"
        android:textColor="@android:color/holo_blue_dark"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/button"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/information"
        android:onClick="showInfo" />


</RelativeLayout>